pkgs/typed-racket-pkgs/typed-racket-tests/tests/typed-racket/fail/single-letrec.rkt
#lang typed/racket

(: f (Pair 'bad 'worse))
(define f
  (letrec ((y y)) y))
